# Aries

./: .gitignore  BriefHistory.txt  CMakeLists.txt  Doxyfile  test.md
src/: ARIES_main.cpp  CMakeLists.txt
src/common/: ARvector.hpp  AriesMPI.cpp  AriesMPI.hpp  AriesManager.cpp  AriesManager.hpp  AriesOMP.hpp  CMakeLists.txt  Clock.cpp  Clock.hpp  Complex.hpp  IOStream.hpp  Logger.cpp  Logger.hpp  MathUtilities.cpp  MathUtilities.hpp  ParallelBuffer.cpp  ParallelBuffer.hpp  Param.cpp  Param.hpp  ParamIndices.cpp  ParamIndices.hpp  Parser.cpp  Parser.hpp  StartupShutdownManager.cpp  StartupShutdownManager.hpp  Timer.cpp  Timer.hpp  TimerManager.cpp  TimerManager.hpp  Utilities.cpp  Utilities.hpp  armath.h  const_def.h
src/dualgrid/: CMakeLists.txt  DGEdge.cpp  DGEdge.hpp  DGPoint.cpp  DGPoint.hpp  DGVertex.cpp  DGVertex.hpp  DualGrid.cpp  DualGrid.hpp  IDGPoint.hpp
src/element/: Elem.hpp
src/geom/: CMakeLists.txt  GEOM_Geometry.cpp  GEOM_Geometry.hpp  GEOM_GeometryMultigrid.cpp  GEOM_GeometryMultigrid.hpp  GEOM_GeometryMultigrid.inl  GEOM_GeometryMultigridQueue.cpp  GEOM_GeometryMultigridQueue.hpp  GEOM_GeometryMultigridQueue.inl  GEOM_GeometryPeriodic.cpp  GEOM_GeometryPeriodic.hpp  GEOM_GeometryPeriodic.inl  GEOM_GeometryPhysical.cpp  GEOM_GeometryPhysical.hpp  GEOM_GeometryPhysical.inl  GeomUtilities.cpp  GeomUtilities.hpp  MeshData.cpp  MeshData.hpp  MeshReader.cpp  MeshReader.hpp  MeshReaderCGNS.cpp  MeshReaderCGNS.hpp  MeshReaderSU2.cpp  MeshReaderSU2.hpp
src/grid/: CMakeLists.txt  Grid.cpp  Grid.hpp  GridHexa.cpp  GridHexa.hpp  GridLine.cpp  GridLine.hpp  GridPrism.cpp  GridPrism.hpp  GridPyramid.cpp  GridPyramid.hpp  GridQuad.cpp  GridQuad.hpp  GridTetra.cpp  GridTetra.hpp  GridTriangle.cpp  GridTriangle.hpp  GridVertexMPI.cpp  GridVertexMPI.hpp
src/grid/untitled folder/: GRID_FreeFormDefBox.cpp  GRID_FreeFormDefBox.hpp  GRID_FreeFormDefBox.inl  GRID_Gridmovement.cpp  GRID_Gridmovement.hpp  GRID_Gridmovement.inl  GRID_SurfaceMovement.cpp  GRID_SurfaceMovement.hpp  GRID_SurfaceMovement.inl  GRID_VolumetricMovement.cpp  GRID_VolumetricMovement.hpp  GRID_VolumetricMovement.inl
src/material/: CMakeLists.txt  ConductivityModel.cpp  ConductivityModel.hpp  FluidModel.cpp  FluidModel.hpp  ViscosityModel.cpp  ViscosityModel.hpp
src/math/: MATH_LinearSolver.cpp  MATH_LinearSolver.hpp  MATH_LinearSolver.inl  MATH_Matrix.cpp  MATH_Matrix.hpp  MATH_Matrix.inl  MATH_Vector.cpp  MATH_Vector.hpp  MATH_Vector.inl
src/output/: CMakeLists.txt  Cae_Output_for_copy.cpp  IElement.hpp  IMesh.hpp  ISolution.hpp  IVariable.hpp  IVariableAdj.hpp  Output.cpp  Output.hpp  Output_MergeCoordinates.cpp
src/procdata/: CMakeLists.txt  IProcData.hpp  ProcData.cpp  ProcData.hpp
src/solver/: SolverMgr.cpp  SolverMgr.hpp
